@@ -1,3 +1,12 @@
+Sat Jan 29 23:55:03 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* examples/Misc/test_read_buffer.cpp:
+	* examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.i:
+	* examples/Web_Crawler/URL.h:
+
+	  Added missing header include directives that are necessary due
+	  to inter-header dependency reductions in ACE.
+
 Sat Jan 29 23:44:37 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* examples/ASX/Event_Server/Event_Server/event_server.cpp:
